--- a/reset.css
+++ b/reset.css
@@ -9,8 +9,30 @@
 
 ul{
     list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
 a{
     text-decoration: none;
+    color: inherit;
 }
+
+.container{
+    width: 75%;
+}
+
+
+
+/* .active{
+    box-shadow: 0 4px 15px -5px rgba(0, 0, 0, 0.1);
+    padding-top: 10px;
+    padding-bottom: 10px;
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+
+  } */
+  
+ 
