--- a/reset.css
+++ b/reset.css
@@ -24,15 +24,30 @@ a{
 
 
 
-/* .active{
+.active{
     box-shadow: 0 4px 15px -5px rgba(0, 0, 0, 0.1);
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 10px !important;
+    padding-bottom: 14px !important;
+
     position: fixed;
     left: 0;
     top: 0;
     right: 0;
+    animation-name: fadeInUp;
+    animation-duration: 0.5s;
+    z-index: 9999;
+  }
 
-  } */
+  @keyframes fadeInUp {
+    from {
+      opacity: 1;
+      top: -130px;
+    }
+    to {
+      opacity: 1;
+      top: 0;
+    }
+  }
+
   
  
