--- a/style.css
+++ b/style.css
@@ -244,11 +244,12 @@ main {
           transform: translateX(60%);
           position: absolute;
           content: "";
-          width: 304px;
+          width: 297px;
           height: 264px;
-          background: url(../images/dots.png) right top;
-          right: 0;
+          background: url(https://preview.colorlib.com/theme/launch/images/dots.png.webp) right top;
+          right: -1px;
           z-index: -1;
+          top: 58px;
         }
         .promote {
           h1 {
@@ -463,6 +464,7 @@ footer {
           color: #888;
         }
         .connect {
+          padding-top: 20px;
           h3 {
             font-size: 16px;
             color: #000000;
@@ -483,31 +485,45 @@ footer {
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                transition: all .2s ease;
-                &:hover{
+                transition: all 0.2s ease;
+                &:hover {
                   background-color: #407bff;
-                }
-                .fa-brands {
-                 
-               
                 }
               }
             }
           }
         }
       }
-      .projects{
-        h3{
+      .projects {
+        /* margin-left: 4rem; */
+        h3 {
           font-size: 16px;
           color: #000000;
           margin-bottom: 30px;
         }
-        ul{
-          li{
-            a{
+        ul {
+          display: flex;
+          flex-direction: column;
+          gap: 10px;
+          li {
+            a {
               font-size: 14px;
               color: #888;
             }
+          }
+        }
+      }
+      .copyright {
+        margin-top: 5rem;
+        text-align: center;
+        p {
+          font-size: 14px;
+          color: #888;
+          .fa-heart {
+            color: #dc3545;
+          }
+          a {
+            color: #407BFF;
           }
         }
       }
