testimional pricing services sections add

--- a/reset.css
+++ b/reset.css
@@ -1,52 +1,58 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
 
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: "Nunito", sans-serif;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Nunito", sans-serif;
 }
 
-ul{
-    list-style: none;
-    padding: 0;
-    margin: 0;
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
-a{
-    text-decoration: none;
-    color: inherit;
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
-.container{
-    width: 75%;
+.container {
+  width: 75%;
 }
 
+.pd-right_left {
+  padding-right: 15px;
+  padding-left: 15px;
+}
 
+.active-nav {
+  box-shadow: 0 4px 15px -5px rgba(0, 0, 0, 0.1);
+  padding-top: 14px !important;
+  padding-bottom: 11px !important;
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  animation-name: fadeInUp;
+  animation-duration: 0.5s;
+  z-index: 9999;
+}
 
-.active{
-    box-shadow: 0 4px 15px -5px rgba(0, 0, 0, 0.1);
-    padding-top: 14px !important;
-    padding-bottom: 11px !important;
-    position: fixed;
-    left: 0;
+@keyframes fadeInUp {
+  from {
+    opacity: 1;
+    top: -130px;
+  }
+  to {
+    opacity: 1;
     top: 0;
-    right: 0;
-    animation-name: fadeInUp;
-    animation-duration: 0.5s;
-    z-index: 9999;
   }
+}
 
-  @keyframes fadeInUp {
-    from {
-      opacity: 1;
-      top: -130px;
-    }
-    to {
-      opacity: 1;
-      top: 0;
-    }
-  }
 
-  
- 
+
+
+
+
