--- a/style.css
+++ b/style.css
@@ -770,6 +770,155 @@ main {
       }
     }
   }
+  #contact-sec {
+    padding-bottom: 100px;
+    .container {
+      .row {
+        display: flex;
+        justify-content: space-between;
+        .get-in-touch {
+          text-align: center;
+          h2 {
+            font-size: 38px;
+            color: #000000;
+          }
+          p {
+            font-size: 16px;
+            color: #939393;
+          }
+        }
+        .contact-form {
+          margin-top: 1.5rem;
+          form {
+            .row {
+              margin-bottom: 1rem;
+              .first_name {
+                label {
+                  font-size: 16px;
+                  color: #939393;
+                }
+                .name {
+                  border: none;
+                  font-size: 16px;
+                  height: 45px;
+                  padding-left: 0;
+                  padding-right: 0;
+                  background: transparent;
+                  border-bottom: 1px solid #43434d;
+                  color: #000000;
+                  font-weight: 400;
+                  outline: none;
+                  line-height: 1.5;
+                  display: block;
+                  width: 100%;
+                }
+              }
+              .last_name {
+                label {
+                  font-size: 16px;
+                  color: #939393;
+                }
+                .surname {
+                  border: none;
+                  font-size: 16px;
+                  height: 45px;
+                  padding-left: 0;
+                  padding-right: 0;
+                  background: transparent;
+                  border-bottom: 1px solid #43434d;
+                  color: #000000;
+                  font-weight: 400;
+                  outline: none;
+                  line-height: 1.5;
+                  display: block;
+                  width: 100%;
+                }
+              }
+            }
+            .email {
+              margin-bottom: 1rem;
+              label {
+                font-size: 16px;
+                color: #939393;
+              }
+              .email-inp {
+                border: none;
+                font-size: 16px;
+                height: 45px;
+                padding-left: 0;
+                padding-right: 0;
+                background: transparent;
+                border-bottom: 1px solid #43434d;
+                color: #000000;
+                font-weight: 400;
+                outline: none;
+                line-height: 1.5;
+                display: block;
+                width: 100%;
+              }
+            }
+            .message {
+              margin-bottom: 1rem;
+              label {
+                font-size: 16px;
+                color: #939393;
+              }
+              textarea {
+                border: none;
+                font-size: 16px;
+                padding-left: 0;
+                padding-right: 0;
+                background: transparent;
+                border-bottom: 1px solid #43434d;
+                border-radius: 0;
+                color: #000000;
+                outline: none;
+                width: 100%;
+              }
+            }
+            button {
+              padding-top: 15px;
+              padding-bottom: 15px;
+              padding-left: 30px;
+              padding-right: 30px;
+              border-radius: 30px;
+              font-size: 11px;
+              text-transform: uppercase;
+              font-weight: 700;
+              outline: none;
+            }
+          }
+        }
+        .contact-info {
+          margin-top: 1.5rem;
+          h3 {
+            font-size: 20px;
+            font-weight: 500;
+            line-height: 1.2;
+            margin-bottom: 1.5rem;
+            color: #000;
+          }
+          .contact-list {
+            li {
+              margin-bottom: 1rem;
+              font-size: 16px;
+              display: flex;
+              align-items: baseline;
+              gap: 8px;
+              transition: 0.3s ease-in-out;
+              cursor: pointer;
+              &:hover {
+                color: #0d6efd;
+              }
+              .fa-solid {
+                font-size: 14px;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 }
 
 footer {
