--- a/style.css
+++ b/style.css
@@ -770,8 +770,199 @@ main {
       }
     }
   }
+  #about-sec {
+    margin-bottom: 100px;
+    .container {
+      .row {
+        .about-img {
+          width: 100%;
+          height: auto;
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center;
+          }
+        }
+        .about-text {
+          .head {
+            color: #407bff;
+            font-size: 13px;
+            text-transform: uppercase;
+            font-weight: 700;
+            display: inline-block;
+          }
+          h2 {
+            font-size: 38px;
+            color: #000000;
+            font-weight: 500;
+            line-height: 1.2;
+          }
+          p {
+            font-size: 16px;
+            color: #939393;
+            margin-bottom: 1.5rem;
+            .highlights {
+              background: rgba(64, 123, 255, 0.07);
+            }
+          }
+          .list {
+            margin-bottom: 1.5rem;
+            li {
+              font-size: 16px;
+              color: #939393;
+              display: flex;
+              gap: 10px;
+              align-items: flex-start;
+              .bi-check2 {
+                color: #407bff;
+                font-size: 21px;
+              }
+            }
+          }
+          .count-numb {
+            display: flex;
+            justify-content: space-between;
+            width: 238px;
+            .members-numb {
+              .number {
+                color: #000000;
+                font-size: 40px;
+                display: block;
+              }
+              .count-text {
+                text-transform: uppercase;
+                font-size: 11px;
+                font-weight: 700;
+                letter-spacing: 0.1rem;
+                color: #939393;
+              }
+            }
+            .team-numb {
+              .number {
+                color: #000000;
+                font-size: 40px;
+                display: block;
+              }
+              .count-text {
+                text-transform: uppercase;
+                font-size: 11px;
+                font-weight: 700;
+                letter-spacing: 0.1rem;
+                color: #939393;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+  #news {
+    padding: 100px 0;
+    background-color: #f8f9fa;
+    .container {
+      .row {
+        .news-tittle {
+          text-align: center;
+          h2 {
+            font-size: 38px;
+            color: #000000;
+          }
+          p {
+            font-size: 16px;
+            color: #939393;
+          }
+        }
+        .news-card {
+          background: rgb(255, 255, 255);
+          padding: 30px;
+          transition: all 0.3s ease;
+          transform: translateY(0px);
+          cursor: pointer;
+          margin-top: 1.5rem;
+          &:hover {
+            transform: translateY(-10px);
+            box-shadow: rgba(0, 0, 0, 0.05) 0px 15px 30px 0px;
+          }
+          .author {
+            display: flex;
+            align-items: flex-start;
+            gap: 18px;
+            margin-bottom: 1.5rem;
+            img {
+              width: 50px;
+              height: 50px;
+              border-radius: 60%;
+              object-fit: cover;
+            }
+            .author-desc {
+              .name {
+                font-weight: 700;
+                color: rgb(0, 0, 0);
+                font-size: 16px;
+                margin: 0;
+              }
+              .date {
+                color: rgb(198, 198, 198);
+                line-height: 1.4;
+                font-size: 16px;
+              }
+            }
+          }
+          .news-content {
+            span {
+              font-size: 13px;
+              color: rgb(198, 198, 198);
+              display: block;
+              margin-bottom: 20px;
+            }
+            h3 {
+              margin-bottom: 1.5rem;
+              a {
+                color: rgb(0, 0, 0);
+                line-height: 1.2;
+                transition: 0.3s ease-in-out;
+                &:hover {
+                  color: #407bff;
+                }
+              }
+            }
+            .readMoreNews {
+              position: relative;
+              &:hover {
+                .square-back {
+                  background-color: #407bff;
+                }
+                .bi-arrow-right {
+                  left: 30px;
+                }
+              }
+              .bi-arrow-right {
+                font-size: 26px;
+                cursor: pointer;
+                transition: all 0.3s ease;
+                position: relative;
+                z-index: 1;
+                left: 0;
+              }
+              .square-back {
+                position: absolute;
+                width: 25px;
+                height: 25px;
+                background: rgb(248, 249, 250);
+                top: 4px;
+                left: 13px;
+                cursor: pointer;
+                transition: 0.3s ease;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
   #contact-sec {
-    padding-bottom: 100px;
+    padding: 100px 0;
     .container {
       .row {
         display: flex;
@@ -788,7 +979,7 @@ main {
           }
         }
         .contact-form {
-          margin-top: 1.5rem;
+          margin-top: 2rem;
           form {
             .row {
               margin-bottom: 1rem;
