--- a/style.css
+++ b/style.css
@@ -323,6 +323,85 @@ main {
       }
     }
   }
+  #dashboard-sec {
+    background-color: #f8f9fa;
+    padding: 100px 0;
+    .container {
+      .row {
+        .dash-img {
+          width: 100%;
+          border: 10px solid #ffffff;
+          position: relative;
+          img {
+            width: 100%;
+            height: 100%;
+            object-position: center;
+            object-fit: cover;
+          }
+          .img-number {
+            position: absolute;
+            left: 44%;
+            bottom: 5%;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            background: #407bff;
+            color: #fff;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+          }
+        }
+        .serv-group {
+          display: flex;
+          flex-direction: column;
+          gap: 10px;
+          .servbox {
+            padding: 20px;
+            display: flex;
+            gap: 29px;
+            align-items: flex-start;
+            border-radius: 7px;
+            
+            transition: all .3s ease-in;
+            cursor: pointer;
+            &:hover{
+              background-color: #fff;
+              box-shadow: -1 4px 10px -4px rgba(0, 0, 0, 0.05);
+            }
+            .serv-icon {
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              margin-bottom: 1.5rem;
+              background-color: #6fe7dd;
+              width: 40px;
+              height: 40px;
+              flex: 0 0 40px;
+              border-radius: 30%;
+              box-shadow: 0 2px 10px 0 rgba(111, 231, 221, 0.3);
+              .bi-app-indicator {
+                color: #fff;
+                font-size: 19px;
+              }
+            }
+            .box-desc {
+              h3 {
+                font-size: 18px;
+                font-weight: 500;
+                line-height: 1.2;
+              }
+              .serv-info {
+                font-size: 16px;
+                color: #939393;
+                margin: 0;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
   #feat-page {
     padding: 100px 0;
     .container {
@@ -485,6 +564,7 @@ main {
       .row {
         .pricing-desc {
           text-align: center;
+          overflow: hidden;
           h2 {
             font-size: 38px;
             color: #000000;
