--- a/style.css
+++ b/style.css
@@ -1,3 +1,25 @@
+.mobilNav {
+  display: none;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  .container {
+    .row {
+      .mobilNav-item {
+        .page-logo {
+          a {
+            color: #000000;
+            font-size: 24px;
+            font-weight: 700;
+            span {
+              color: #407bff;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
 .desktopNav {
   padding-top: 20px;
   padding-bottom: 20px;
@@ -362,10 +384,10 @@ main {
             gap: 29px;
             align-items: flex-start;
             border-radius: 7px;
-            
-            transition: all .3s ease-in;
+
+            transition: all 0.3s ease-in;
             cursor: pointer;
-            &:hover{
+            &:hover {
               background-color: #fff;
               box-shadow: -1 4px 10px -4px rgba(0, 0, 0, 0.05);
             }
@@ -381,6 +403,54 @@ main {
               border-radius: 30%;
               box-shadow: 0 2px 10px 0 rgba(111, 231, 221, 0.3);
               .bi-app-indicator {
+                color: #fff;
+                font-size: 19px;
+              }
+            }
+            .serv-icon2 {
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              margin-bottom: 1.5rem;
+              background-color: #ffc93c;
+              width: 40px;
+              height: 40px;
+              flex: 0 0 40px;
+              border-radius: 30%;
+              box-shadow: 0 2px 10px 0 rgba(255, 201, 60, 0.3);
+              .bi-arrow-repeat {
+                color: #fff;
+                font-size: 19px;
+              }
+            }
+            .serv-icon3 {
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              margin-bottom: 1.5rem;
+              background-color: #f73859;
+              width: 40px;
+              height: 40px;
+              flex: 0 0 40px;
+              border-radius: 30%;
+              box-shadow: 0 2px 10px 0 rgba(247, 56, 89, 0.3);
+              .bi-briefcase {
+                color: #fff;
+                font-size: 19px;
+              }
+            }
+            .serv-icon4 {
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              margin-bottom: 1.5rem;
+              background-color: #407bff;
+              width: 40px;
+              height: 40px;
+              flex: 0 0 40px;
+              border-radius: 30%;
+              box-shadow: 0 2px 10px 0 rgba(64, 123, 255, 0.3);
+              .bi-collection {
                 color: #fff;
                 font-size: 19px;
               }
@@ -543,6 +613,51 @@ main {
               font-size: 24px;
             }
           }
+          .serv-icon2 {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-bottom: 1.5rem;
+            background-color: #ffc93c;
+            width: 50px;
+            height: 50px;
+            border-radius: 30%;
+            box-shadow: 0 2px 10px 0 rgba(255, 201, 60, 0.3);
+            .bi-arrow-repeat {
+              color: #fff;
+              font-size: 24px;
+            }
+          }
+          .serv-icon3 {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-bottom: 1.5rem;
+            background-color: #f73859;
+            width: 50px;
+            height: 50px;
+            border-radius: 30%;
+            box-shadow: 0 2px 10px 0 rgba(247, 56, 89, 0.3);
+            .bi-briefcase {
+              color: #fff;
+              font-size: 24px;
+            }
+          }
+          .serv-icon4 {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-bottom: 1.5rem;
+            background-color: #407bff;
+            width: 50px;
+            height: 50px;
+            border-radius: 30%;
+            box-shadow: 0 2px 10px 0 rgba(64, 123, 255, 0.3);
+            .bi-collection {
+              color: #fff;
+              font-size: 24px;
+            }
+          }
           h3 {
             font-size: 18px;
             font-weight: 500;
@@ -692,6 +807,54 @@ main {
             margin-right: 30px;
             flex: 0 0 40px;
             .bi-app-indicator {
+              font-size: 20px;
+              color: #fff;
+            }
+          }
+          .serv-icon2 {
+            background-color: #ffc93c;
+            width: 40px;
+            height: 40px;
+            box-shadow: 0 2px 10px 0 rgba(255, 201, 60, 0.3);
+            border-radius: 30%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-right: 30px;
+            flex: 0 0 40px;
+            .bi-arrow-repeat {
+              font-size: 20px;
+              color: #fff;
+            }
+          }
+          .serv-icon3 {
+            background-color: #f73859;
+            width: 40px;
+            height: 40px;
+            box-shadow: 0 2px 10px 0 rgba(247, 56, 89, 0.3);
+            border-radius: 30%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-right: 30px;
+            flex: 0 0 40px;
+            .bi-briefcase {
+              font-size: 20px;
+              color: #fff;
+            }
+          }
+          .serv-icon4 {
+            background-color: #407bff;
+            width: 40px;
+            height: 40px;
+            box-shadow: 0 2px 10px 0 rgba(64, 123, 255, 0.3);
+            border-radius: 30%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-right: 30px;
+            flex: 0 0 40px;
+            .bi-collection {
               font-size: 20px;
               color: #fff;
             }
