--- a/responsive.css
+++ b/responsive.css
@@ -102,7 +102,7 @@
             }
         }
         #feat-page{
-            container{
+            .container{
                 .row{
                     .dashboard{
                         height: 384px;
